--- a/src/client/pages/race.html
+++ b/src/client/pages/race.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/stylesheets/create.css">
     <link rel="stylesheet" href="assets/stylesheets/progress.css">
     <link rel="stylesheet" href="assets/stylesheets/results.css">
-    <script src="/assets/javascript/index.js" charset="utf-8"></script>
+    <script src="assets/javascript/index.js" charset="utf-8"></script>
 </head>
 
 <body id="race">
@@ -23,7 +23,7 @@
         <section id="create-race">
             <h2>Get Started</h2>
             <h3>Create Your Race</h3>
-            <form id="create-race">
+            <form id="create-race-form">
                 <h3>Choose your track</h3>
                 <ul class="cards-list" id="tracks">
                     <!-- filled via js -->
