--- a/src/client/pages/results.html
+++ b/src/client/pages/results.html
@@ -8,7 +8,7 @@
     <title>View Your Race Progress</title>
     <link rel="stylesheet" href="assets/stylesheets/reset.css">
     <link rel="stylesheet" href="assets/stylesheets/index.css">
-    <script src="/assets/javascript/index.js" charset="utf-8"></script>
+    <script src="assets/javascript/index.js" charset="utf-8"></script>
 </head>
 
 <body>
